# derive-finite-automaton

./: .gitignore  Cargo.toml  README.md
.github/workflows/: crates.yml  rust.yml
derive-finite-automaton/: Cargo.toml  README.md  lib.rs
derive-finite-automaton-derive/: Cargo.toml  macro.rs  trie.rs
derive-finite-automaton-derive/src/: lib.rs  trie.rs
derive-finite-automaton/examples/: main.rs  main_byte.rs  with_cfg.rs
derive-finite-automaton/src/: lib.rs
derive-finite-automaton/tests/: test.rs
