[package]
name = "derive-finite-automaton-derive"
description = "Procedural macro for generating finite automaton"
version = "0.1.0"
repository = "https://github.com/kaleidawave/derive-finite-automaton"
authors = ["Ben <kaleidawave@gmail.com>"]
keywords = ["parsing", "tokenization", "utils"]
categories = ["parsing"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "derive_finite_automaton_derive"
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["printing", "full", "parsing"] }
quote = "1.0"

