[package]
name = "derive-finite-automaton-derive"
description = "Procedural macro for generating finite automaton"
version = "0.1.1"
repository = "https://github.com/kaleidawave/derive-finite-automaton"
authors = ["Ben <kaleidawave@gmail.com>"]
keywords = ["parsing", "tokenization", "utils"]
categories = ["parsing"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "derive_finite_automaton_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
either_n = "0.2"
quote = "1.0"
syn = { version = "1.0", features = [
  "printing",
  "full",
  "parsing",
  "extra-traits",
] }
